--- a/front-end/mindful/src/app/app.component.html
+++ b/front-end/mindful/src/app/app.component.html
@@ -1,4 +1,8 @@
-
+<ul>
+  <li class="text" *ngFor="let item of items | async">
+    {{item.name}}
+  </li>
+</ul>
 <router-outlet></router-outlet> 
 
 
