--- a/front-end/mindful/src/app/map/map.component.html
+++ b/front-end/mindful/src/app/map/map.component.html
@@ -12,37 +12,32 @@
     </div>
   </nav>
 
-  <main role="main" class="container">
+  <div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<div class="map" *ngIf="lat && lng">
-					<!-- this creates a google map on the page with the given lat/lng from -->
-					<!-- the component as the initial center of the map: -->
-					<agm-map [latitude]="lat" [longitude]="lng">
-					  <agm-marker>
-					  	<!--Nearby User Locations -->
-					  	<agm-marker *ngFor="let marker of markers">
-					  		[latitude]="marker.location[0]"
-					  		[longitude]="marker.location[1]"
+				
+				<div *ngIf="lat && lng">
+				  <agm-map [latitude]="lat" [longitude]="lng">
+				  	<agm-marker *ngFor="let marker of markers"
+				  	  [latitude]="marker.location[0]"
+				  	  [longitude]="marker.location[1]">
+				  	  <agm-info-window>
+				  	    <h3><strong>Location Details</strong></h3>
+				  	    <p>You are {{ marker.distance }} kilometers from this point</p>
+				  	  </agm-info-window>
+				  	</agm-marker>
+				  </agm-map>
+				<div>
 
-					  		<agm-info-window>
-					  			<p>You are {{marker.distance}} Kilometers from this point</p>
-					  		</agm-info-window>
-					  	</agm-marker>
-
-					  </agm-marker>
-					</agm-map>
-					
-				</div>
 			</div>
 		</div>
-  </main><!-- /.container -->
+  </div> <!-- /.container
 
 
-<div class="container">
+ <div class="container">
 	<div class= "form-group">
 		<input type="text" placeholder="Search by zipcode" class= "form-control" #search>
 	</div>
-</div>
+</div> -->
 
 
