--- a/front-end/mindful/src/app/map/map.component.html
+++ b/front-end/mindful/src/app/map/map.component.html
@@ -15,18 +15,14 @@
   <div class="container">
 		<div class="row">
 			<div class="col-md-12">
+				<div class="form-group">
+					<input class="form-control" type="text" placeholder="Find Meditation places near you" #search>
+				</div>
 				
 				<div *ngIf="lat && lng">
-				  <agm-map [latitude]="lat" [longitude]="lng">
-				  	<agm-marker *ngFor="let marker of markers"
-				  	  [latitude]="marker.location[0]"
-				  	  [longitude]="marker.location[1]">
-				  	  <agm-info-window>
-				  	    <h3><strong>Location Details</strong></h3>
-				  	    <p>You are {{ marker.distance }} kilometers from this point</p>
-				  	  </agm-info-window>
-				  	</agm-marker>
-				  </agm-map>
+					<agm-map [latitude]="lat" [longitude]="lng">
+					  <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+					</agm-map>
 				<div>
 
 			</div>
