--- a/front-end/mindful/src/app/community/community.component.html
+++ b/front-end/mindful/src/app/community/community.component.html
@@ -1,2 +1,38 @@
-<app-map></app-map>	
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Community</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+    <ul class="navbar-nav mr-auto">
+      
+    </ul>
+
+  </div>
+</nav>
+
+
+<!-- <app-map></app-map>	 -->
+
+<div class="container">
+	<h3>Post an event!</h3>
+	<form #eventForm = "ngForm" (ngSubmit) = "onSubmit(eventForm.value)">
+	  <div class="form-group">
+	    <label class="col-form-label" for="formGroupExampleInput">Date of Event</label>
+	    <!-- <input type="text" name="date" class="form-control" id="" placeholder="in MMDDYY format please" ngModel> -->
+	    <input #myDatePicker type="date" value='{{ myDate | date:"yyyy-MM-dd" }}' (input)="onInput(myDatePicker.value)" />
+	  </div>
+	  <div class="form-group">
+	    <label class="col-form-label" for="formGroupExampleInput2">Details</label>
+	    <input type="text" name="details" class="form-control" id="" placeholder="Time, Location, etc." ngModel>
+	  </div>
+	  <input type="submit" value="Submit">
+	</form>
+</div>
+
+<div>
+	<h2>{{myDate}}</h2>
+	<p>{{details}}</p>
+</div>
 
