--- a/front-end/mindful/src/app/landing/landing.component.html
+++ b/front-end/mindful/src/app/landing/landing.component.html
@@ -1,3 +1,18 @@
-<p>
-  landing works!
-</p>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+
+	<a class="navbar-brand" href="#">Mindful Minutes</a>
+
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+	<span class="navbar-toggler-icon"></span>
+	</button>
+
+	<div class="collapse navbar-collapse" id="navbarsExampleDefault">
+		<ul class="navbar-nav mr-auto"> </ul>
+	</div>
+
+</nav>
+
+<h1>
+      {{(minutesDisplay) && (minutesDisplay <= 59) ? minutesDisplay : '00'}} : {{(secondsDisplay) && (secondsDisplay <= 59) ? secondsDisplay : '00'}} <br/>
+ </h1> 
+ <button type="button" (click)='startTimer()'>Ready to relax</button>
