adds landing quote, CSS animation. Creates guided page

--- a/front-end/mindful/src/app/landing/landing.component.html
+++ b/front-end/mindful/src/app/landing/landing.component.html
@@ -11,8 +11,27 @@
 	</div>
 
 </nav>
+<h2>Quiet the mind and the soul will speak -Ma Jaya Sati Bhagavati</h2>
 
 <h1>
       {{(minutesDisplay) && (minutesDisplay <= 59) ? minutesDisplay : '00'}} : {{(secondsDisplay) && (secondsDisplay <= 59) ? secondsDisplay : '00'}} <br/>
  </h1> 
  <button type="button" (click)='startTimer()'>Ready to relax</button>
+
+
+<div class="circle">Just breathe</div>
+
+<h3>Get inspired</h3>
+<p>Sometimes simply by sitting, the soul collects wisdom.</p>
+<p>-Zen Proverb</p>
+
+<!-- <ul id="quotes">
+	<li *ngFor="let quote of quotes | async">
+		<div class="singleQuote">
+			<h1>{{quote.quote}}</h1>
+			<p>{{quote.author}}</p>
+
+		</div>
+	</li>
+</ul> -->
+
