--- a/front-end/mindful/src/app/landing/landing.component.css
+++ b/front-end/mindful/src/app/landing/landing.component.css
@@ -3,3 +3,43 @@ h1 {
     margin-top: 24px; 
     text-align: center;   
 } 
+
+/*.container {
+	height: 500px;
+	width: 100%;
+}*/
+
+.circle {
+  background: #bf1e2c;
+  width: 500px;
+  height: 500px;
+  margin: auto;
+  border-radius: 100%;
+  overflow: hidden;
+  font-size: 65px;
+  color: white;
+  text-align: center;
+  line-height: 500px;
+}
+
+.circle {
+  -webkit-animation:grow 8s 1;
+  -webkit-animation-iteration-count: infinite;
+
+}
+
+@-webkit-keyframes grow {
+	0% {
+	-webkit-transform: scale( 0.6 );-moz-transform: scale( 0.6 );-o-transform: scale( 0.6 );-ms-transform: scale( 0.6 );transform: scale( 0.6 );
+	}
+
+	50% {
+	-webkit-transform: scale( 0.3 );-moz-transform: scale( 0.3 );-o-transform: scale( 0.3 );-ms-transform: scale( 0.3 );transform: scale( 0.3 );
+	}
+
+	100% {
+	-webkit-transform: scale( 0.6 );-moz-transform: scale( 0.6 );-o-transform: scale( 0.6 );-ms-transform: scale( 0.6 );transform: scale( 0.6 );
+	}
+
+
+}
