rough draft of howto page including images

--- a/front-end/mindful/src/app/landing/landing.component.html
+++ b/front-end/mindful/src/app/landing/landing.component.html
@@ -12,6 +12,7 @@
 
 </nav>
 <h2>Quiet the mind and the soul will speak -Ma Jaya Sati Bhagavati</h2>
+<p>15 minutes a day can: boost immune system, lower stress, reduce blood pressure, increase productivity, improve concentration.</p>
 
 <h1>
       {{(minutesDisplay) && (minutesDisplay <= 59) ? minutesDisplay : '00'}} : {{(secondsDisplay) && (secondsDisplay <= 59) ? secondsDisplay : '00'}} <br/>
