--- a/front-end/mindful/src/app/landing/landing.component.css
+++ b/front-end/mindful/src/app/landing/landing.component.css
@@ -1,16 +1,94 @@
+/*div {
+  background-color: #D9E1E2;
+}*/
+
+/* <----- Top div that holds nav and branding ----->*/
+.topDisplay {
+  height: 800px;
+  background-image: url('./../../assets/water.png');
+  background-size: auto;
+  color: white;
+}
+
+.fade {
+  background: none;
+  height: 600px;
+  opacity: 0.6;
+}
+
+nav {
+  background-color: #D9E1E2;
+}
+
+/* Brand header */
+.brand {
+  font-family: 'Calligraffitti', cursive;
+  font-size: 150px;
+  text-align: center;
+  padding-top: 50px;
+  -webkit-animation-name: fadein;
+  -webkit-animation-duration: 3s;
+}
+
+/*Subheader slogan */
+.floating {
+  opacity: 1;
+  font-family: 'Indie Flower', cursive;
+  font-size: 50px;
+  text-align: center;
+  padding-top: 100px;
+  padding-right: 20px;
+  color: #404146;
+  animation-name: floating;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+
+}
+
+/*<----- End of top div ------>*/
+
+/*------- Colorful transition, with list -----*/
+
+  /*Background of bullet list*/
+.skewed {
+  height: 350px;
+  width: 100%;
+  transform: skewY(-4deg);
+  transform-origin: bottom left;
+  margin-top: -50px;
+  background: linear-gradient(to bottom right, rgba(46,132,165, 1), rgba(46,132,165, 1), rgba(91,166,165, 1), rgba(91,166,165, .6))
+}
+
+.content {
+  transform: skewY(4deg);
+  transform-origin: bottom left;
+  color: white;
+}
+
+.listHeader {
+  text-align: center;
+  color: white;
+}
+
+ul {
+/*  list-style-image: url('sqpurple.gif');*/
+}
+
+li {
+  display: inline;
+}
+/*-------End transition--------*/
+
+
 h1 {
     color: #57acec;
     margin-top: 24px; 
     text-align: center;   
 } 
 
-/*.container {
-	height: 500px;
-	width: 100%;
-}*/
-
 .circle {
-  background: #bf1e2c;
+  background: #2E84A5;
   width: 500px;
   height: 500px;
   margin: auto;
@@ -28,6 +106,13 @@ h1 {
 
 }
 
+/*-------- Keyframe Animations --------------*/
+@keyframes floating {
+  from { transform: translate(0,  0px); }
+  65%  { transform: translate(0, 15px); }
+  to   { transform: translate(0, -0px); }    
+}
+
 @-webkit-keyframes grow {
 	0% {
 	-webkit-transform: scale( 0.6 );-moz-transform: scale( 0.6 );-o-transform: scale( 0.6 );-ms-transform: scale( 0.6 );transform: scale( 0.6 );
@@ -41,5 +126,9 @@ h1 {
 	-webkit-transform: scale( 0.6 );-moz-transform: scale( 0.6 );-o-transform: scale( 0.6 );-ms-transform: scale( 0.6 );transform: scale( 0.6 );
 	}
 
+}
 
+@-webkit-keyframes fadein {
+  0% { opacity: 0; margin-left: -250px; }
+  100% { opacity: 1; margin-left: 0; }
 }
