--- a/front-end/mindful/src/app/landing/landing.component.css
+++ b/front-end/mindful/src/app/landing/landing.component.css
@@ -24,6 +24,7 @@ nav {
 .brand {
   font-family: 'Calligraffitti', cursive;
   font-size: 150px;
+  color: white;
   text-align: center;
   padding-top: 50px;
   -webkit-animation-name: fadein;
@@ -52,7 +53,7 @@ nav {
 
   /*Background of bullet list*/
 .skewed {
-  height: 350px;
+  height: 300px;
   width: 100%;
   transform: skewY(-4deg);
   transform-origin: bottom left;
@@ -69,23 +70,34 @@ nav {
 .listHeader {
   text-align: center;
   color: white;
+  font-size: 50px;
+  padding-top: 10px;
 }
 
 ul {
-/*  list-style-image: url('sqpurple.gif');*/
+  padding-top: 20px;
 }
 
 li {
   display: inline;
+  font-size: 27px;
+  padding-right: 5px;
 }
 /*-------End transition--------*/
 
+/*--------- Pulsing circle and timer ------*/
 
-h1 {
-    color: #57acec;
-    margin-top: 24px; 
-    text-align: center;   
-} 
+.moment {
+  box-shadow: -5px 5px 11px -2px rgba(0,0,0,0.67);
+  padding-bottom: 20px;
+  height: 550px;
+}
+
+.moment h2 {
+  color: #404146;
+  margin-left: 20px;
+  font-family: 'Calligraffitti', cursive;
+}
 
 .circle {
   background: #2E84A5;
@@ -98,12 +110,38 @@ h1 {
   color: white;
   text-align: center;
   line-height: 500px;
-}
-
-.circle {
+  box-shadow: -5px 5px 11px -2px rgba(0,0,0,0.67);
   -webkit-animation:grow 8s 1;
   -webkit-animation-iteration-count: infinite;
+}
 
+.timer {
+  margin-top: 170px;
+  margin-right: 50%
+}
+
+  /*timer itself*/
+h1 {
+  color: #5BA6A5;
+  margin-top: 24px; 
+  text-align: center; 
+  font-size: 50px;  
+} 
+
+button {
+  height:50px; 
+  width:200px; 
+  position:relative;
+  left: 20%;
+  border-radius: 100%;
+  color: #404146;
+  background-color: #5BA6A5;
+}
+/*-----end circle/timer div -------*/
+
+.inspired {
+  text-align: center;
+  font-size: 20px;
 }
 
 /*-------- Keyframe Animations --------------*/
