--- a/front-end/mindful/src/app/guided/guided.component.css
+++ b/front-end/mindful/src/app/guided/guided.component.css
@@ -3,33 +3,50 @@
 	-moz-box-shadow: -5px 5px 11px -2px rgba(0,0,0,0.67);
 	box-shadow: -5px 5px 11px -2px rgba(0,0,0,0.67);
 }
-h4 {
-	box-shadow: none;
-	margin: 0 0 10px 0;
-	padding: 0;
-}
+
 body {
 	min-height: 100vh;
 }
+
+.intro {
+	background-image: url('../../assets/person-in-water.png');
+	background-size: cover;
+	height: 150px;
+	width: 100%;
+	padding: 40px;
+	text-align: center;
+	font-family: 'Calligraffitti', cursive;
+	color: white;
+	font-size: 50px;
+}
+
 .container-fluid {
-/*	background: #FFFF9D;*/
 	padding: 20px;
 }
+
 .container {
-/*	background: #BEEB9F;*/
 	padding: 20px 40px;
-/*	border: 1px solid #007864;*/
+	box-shadow: none;
+	background: #2E84A5;
 }
+
 .row {
-	background: #79BD8F;
+	background: white;
 	padding: 20px;
 	border: 1px solid #007864;
 }
+
 [class^="col"] {
-	background: #00A388;
+	background: #5BA6A5;
 	min-height: 200px;
 	padding: 20px;
 	border: 1px solid #007864;
 	font-size: 20px;
 	color: #FFF;
+}
+
+p {
+	box-shadow: none;
+	font-weight: bold;
+	margin-left: 15px;
 }
