--- a/front-end/mindful/src/app/guided/guided.component.html
+++ b/front-end/mindful/src/app/guided/guided.component.html
@@ -1,69 +1,67 @@
-<h1>Enjoy some guided meditations</h1>
+
+	<h1 class="intro">
+		Enjoy some guided meditations...
+	</h1>
+
 
 <div class="container-fluid">
+
 		<div class="container">
+
 			<div class="row">
+
 				<div class="col-md-4">
 					<p>Deep Relaxation</p>
-<iframe id="player" type="text/html" width="300" height="200"
-  src="https://www.youtube.com/embed/X7iBnp8T6nY"
-  frameborder="0"></iframe>
+					<iframe id="player" type="text/html" width="300" height="200" src="https://www.youtube.com/embed/X7iBnp8T6nY" frameborder="0"></iframe>
 				</div>
+
 				<div class="col-md-4">
 					<p>Full Mind & Body Healing</p>
-<iframe id="player" type="text/html" width="300" height="200"
-  src="https://www.youtube.com/embed/E3-GzHzklT4"
-  frameborder="0"></iframe>
-					
+					<iframe id="player" type="text/html" width="300" height="200" src="https://www.youtube.com/embed/E3-GzHzklT4" frameborder="0"></iframe>
 				</div>
+
 				<div class="col-md-4">
 					<p>Mindfulness Meditation</p>
-<iframe id="player" type="text/html" width="300" height="200"
-  src="https://www.youtube.com/embed/6p_yaNFSYao"
-  frameborder="0"></iframe>
+					<iframe id="player" type="text/html" width="300" height="200" src="https://www.youtube.com/embed/6p_yaNFSYao" frameborder="0"></iframe>
 				</div>
-			</div>
+
+			</div> <!--End of first row -->
+
 			<div class="row">
+
 				<div class="col-md-4">
 					<p>Power Meditation</p>
-<iframe id="player" type="text/html" width="300" height="200"
-  src="https://www.youtube.com/embed/qXXeN49sQZA"
-  frameborder="0"></iframe>
-					
+					<iframe id="player" type="text/html" width="300" height="200" src="https://www.youtube.com/embed/qXXeN49sQZA" frameborder="0"></iframe>
 				</div>
+
 				<div class="col-md-4">
 					<p>Full Body Scan</p>
-<iframe id="player" type="text/html" width="300" height="200"
-  src="https://www.youtube.com/embed/J2pCDbisNv4"
-  frameborder="0"></iframe>
-					
+					<iframe id="player" type="text/html" width="300" height="200" src="https://www.youtube.com/embed/J2pCDbisNv4" frameborder="0"></iframe>	
 				</div>
+
 				<div class="col-md-4">
 					<p>Deep Muscle Relaxation</p>
-<iframe id="player" type="text/html" width="300" height="200"
-  src="https://www.youtube.com/embed/GSPdoDFSglk"
-  frameborder="0"></iframe>
+					<iframe id="player" type="text/html" width="300" height="200" src="https://www.youtube.com/embed/GSPdoDFSglk" frameborder="0"></iframe>
 				</div>
-			</div>
+
+			</div> <!-- end of second row -->
+
 			<div class="row">
 				<div class="col-md-4">
 					<p>Clearing Negativity</p>
-<iframe id="player" type="text/html" width="300" height="200"
-  src="https://www.youtube.com/embed/EPWpV064K24"
-  frameborder="0"></iframe>
+					<iframe id="player" type="text/html" width="300" height="200" src="https://www.youtube.com/embed/EPWpV064K24" frameborder="0"></iframe>
 				</div>
+
 				<div class="col-md-4">
 					<p>Stress Relief</p>
-<iframe id="player" type="text/html" width="300" height="200"
-  src="https://www.youtube.com/embed/o94tvFUttco"
-  frameborder="0"></iframe>
+					<iframe id="player" type="text/html" width="300" height="200" src="https://www.youtube.com/embed/o94tvFUttco" frameborder="0"></iframe>
 				</div>
+
 				<div class="col-md-4">
 					<p>Headache Relief</p>
-<iframe id="player" type="text/html" width="300" height="200"
-  src="https://www.youtube.com/embed/tINprhTb5qU"
-  frameborder="0"></iframe>
+					<iframe id="player" type="text/html" width="300" height="200" src="https://www.youtube.com/embed/tINprhTb5qU" frameborder="0"></iframe>
 				</div>
-			</div>
-		</div>
-</div>
+			</div> <!-- End of third row -->
+
+		</div> <!-- End of Container -->
+</div> <!-- End of Conatiner-fluid -->
