--- a/front-end/mindful/src/app/app.component.html
+++ b/front-end/mindful/src/app/app.component.html
@@ -6,15 +6,17 @@
 
   <div class="container-fuild">
 
-		<nav class="navbar navbar-expand-md">
+		<nav class="navbar navbar-light navbar-expand-md" style="background-color: #2E84A5; opacity: .5;">
 			<a class="navbar-brand" href="#">Mindful Minutes</a>
-
-			<ul class="nav navbar-nav">
-			  <li class="active"><a href="/">Home</a></li>
-			  <li class="active"><a href="/howto">HowTo</a></li>
-			  <li class="active"><a href="/guided">Guided</a></li>
-			  <li class="active"><a href="/community">Community</a></li>
-			</ul>
+			
+			<div class="collapse navbar-collapse">
+				<ul class="nav navbar-nav mr-auto">
+				  <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
+				  <li class="nav-item active"><a class="nav-link" href="/howto">HowTo</a></li>
+				  <li class="nav-item active"><a class="nav-link" href="/guided">Guided</a></li>
+				  <li class="nav-item active"><a class="nav-link" href="/community">Community</a></li>
+				</ul>
+			</div>
 		</nav>
 
   </div> <!-- End container-fluid -->
