--- a/front-end/mindful/src/app/landing/landing.component.css
+++ b/front-end/mindful/src/app/landing/landing.component.css
@@ -8,6 +8,7 @@
   background-image: url('./../../assets/water.png');
   background-size: auto;
   color: white;
+  margin-top: -20px;
 }
 
 .fade {
@@ -90,7 +91,7 @@ li {
 .moment {
   box-shadow: -5px 5px 11px -2px rgba(0,0,0,0.67);
   padding-bottom: 20px;
-  height: 550px;
+  height: 500px;
 }
 
 .moment h2 {
@@ -136,6 +137,7 @@ button {
   border-radius: 100%;
   color: #404146;
   background-color: #5BA6A5;
+  outline:0;
 }
 /*-----end circle/timer div -------*/
 
