--- a/front-end/mindful/src/app/app.component.html
+++ b/front-end/mindful/src/app/app.component.html
@@ -1,20 +1,15 @@
-<!-- <ul>
-  <li class="text" *ngFor="let item of items | async">
-    {{item.name}}
-  </li>
-</ul> -->
 
   <div class="container-fuild">
 
-		<nav class="navbar navbar-light navbar-expand-md" style="background-color: #2E84A5; opacity: .5;">
+		<nav class="navbar navbar-light navbar-expand-md" style="background-color: #ffffff;">
 			<a class="navbar-brand" href="#">Mindful Minutes</a>
 			
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav mr-auto">
-				  <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
-				  <li class="nav-item active"><a class="nav-link" href="/howto">HowTo</a></li>
-				  <li class="nav-item active"><a class="nav-link" href="/guided">Guided</a></li>
-				  <li class="nav-item active"><a class="nav-link" href="/community">Community</a></li>
+				  <li class="nav-item active"><a class="nav-link" style="color: #858689;" href="/">Home</a></li>
+				  <li class="nav-item active"><a class="nav-link" style="color: #858689;" href="/howto">HowTo</a></li>
+				  <li class="nav-item active"><a class="nav-link" style="color: #858689;" href="/guided">Guided</a></li>
+				  <li class="nav-item active"><a class="nav-link" style="color: #858689;" href="/community">Community</a></li>
 				</ul>
 			</div>
 		</nav>
